MyAccount css fix: Platform access table aligned to center

--- a/portal/static/css/account_view_html.css
+++ b/portal/static/css/account_view_html.css
@@ -205,7 +205,7 @@ ul.errorlist li {
 
 
 
-table.mytable { border-collapse: collapse; border: 1px solid #839E99; 
+table.mytable {margin: auto; border-collapse: collapse; border: 1px solid #839E99; 
 background: #f1f8ee; font: .9em/1.2em Georgia, "Times New Roman", Times, serif; color: #033;table-layout:fixed; }
 .mytable caption { font-size: 1.3em; font-weight: bold; text-align: left; padding: 1em 4px; }
 .mytable td, th { padding: 3px 3px .75em 3px; line-height: 1.3em; }
